css/original.css
/* ... */
.sign-up-modal {
    display: none;
    position:absolute;
    margin-top: -200px;
    z-index: 60000;
		color: #fefefe;
		min-width: 250px;
		max-width: 700px;
		background-image: linear-gradient(130deg, #EBF9F3, #CA7C83, #D099D5,  #C7E3F0, #C3BDF1);
background-size: 1800% 1800%;

-webkit-animation: rainbow 12s ease infinite;
-z-animation: rainbow 12s ease infinite;
-o-animation: rainbow 12s ease infinite;
  animation: rainbow 12s ease infinite;}

@-webkit-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-moz-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-o-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}


.sign-up-modal form {
		margin: 0 auto;
		text-align: center;
}

.sign-up-modal input::-webkit-input-placeholder {
		color: #fefefe;
		opacity: 1;
}

.sign-up-modal input:focus::-webkit-input-placeholder {
		color: #111;
		opacity: .5;
		transition: all 0.3s ease;
}

.sign-up-modal .input-container {
		margin: 10px;
}

.sign-up-modal input[type="email"] {
		outline: 0;
}

.sign-up-modal input[type="email"] {
		font-weight: 700;
		font-size: 1.4em;
		padding: 10px;
		border-width: 2px;
		border-color: rgba(247, 247, 247, .3);
		border-style: solid;
		background: url('transparent');
}

.sign-up-modal input[type="email"]:focus, {
		background: white;
		transition: all 0.3s ease;
		color: #222;
}

.sign-up-modal a {
		color: #fefefe;
		text-decoration: underline;
}

.sign-up-modal a:hover {
		color: #d26960;
}

.sign-up-modal input[type="submit"] {
		font-weight: 700;
		font-size: 1.8em;
		color: #111;
		background: #fefefe;
		box-shadow: 0px 4px 0px 0px #d26a60;
		border-style: none;
		padding: 10px 50px;
		margin: 25px 0 15px 0;
		position: relative;
		display: inline-block;
		transition: all .1s linear;
}

.sign-up-modal input[type="submit"]:active {
		box-shadow: 0 2px 0 #d26a60;
		transform: translateY(3px);
		-webkit-transform: translateY(3px);
		-ms-transform: translateY(3px);
}

.sign-up-modal #close-modal-button {
		border-radius: 50%;
		width: 50px;
		height: 50px;
		background-color: #d26960;
		float: right;
		position: relative;
		top: -17px;
		left: 15px;
		cursor: pointer;
}

.sign-up-modal #close-modal-button:before {
		content: '\2716';
		font-size: 1.5em;
		position: relative;
		top: 8px;
		left: 1px;
}

@media screen and (max-width: 500px) {
		.sign-up-modal{
      transform: translate(-20%,-50%);
    width: 130%;
		}
		.sign-up-modal form {
				width: 70%;
		}
}

